Fix contrast issues in main pages

--- a/apps/dashboard/app/assets/stylesheets/application.scss
+++ b/apps/dashboard/app/assets/stylesheets/application.scss
@@ -24,6 +24,30 @@
 // get in the way
 // $navbar-height: 20px;
 
+
+
+* { // Contrast fixes. Do not edit without re-checking accessibility
+  --bs-link-color: rgb(31, 110, 178);
+  --bs-link-color-rgb: 31, 110, 178;
+  --bs-danger: rgb(218, 52, 67);
+  --bs-danger-rbg: 218, 52, 67;
+}
+
+.btn-danger {
+  --bs-btn-bg: rgb(218, 52, 67);
+  --bs-btn-border-color: rgb(218, 52, 67);
+}
+
+.btn-secondary {
+  --bs-btn-bg: rgb(107 117 128);
+  --bs-btn-border-color: rgb(107 117 128);
+}
+
+.bg-white {
+  --bs-info: rgb(9, 128, 151);
+  --bs-info-rgb: 9, 128, 151;
+}
+
 nav.navbar {
   padding: 0.5rem 1rem;
 }
